--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.3",
     "cogo-toast": "^4.2.3",
     "firebase": "^8.2.6",
+    "flutterwave-react-v3": "^1.0.9",
     "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
