--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "firebase": "^8.2.6",
     "flutterwave-react-v3": "^1.0.9",
     "formik": "^2.2.6",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-loading-skeleton": "^2.2.0",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
