--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-loading-skeleton": "^2.2.0",
     "react-moment": "^1.1.1",
+    "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.2",
     "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
