--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-loading-skeleton": "^2.2.0",
+    "react-medium-image-zoom": "^3.1.3",
     "react-moment": "^1.1.1",
     "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.2",
