--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
     "redux-thunk": "^2.3.0",
+    "tawkto-react": "^2.0.3",
     "web-vitals": "^1.1.0",
     "yup": "^0.32.9"
   },
