--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.6",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-confirm-alert": "^2.8.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-loading-skeleton": "^2.2.0",
